# dboebackend

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  Pipfile  Procfile  README.md  Untitled-2  _es_documentqq  dump_and_restore.sh  es_response.json  main.py  manage.py  pyproject.toml  requirements.txt  sample_entires.xml  sample_entries.xml  simple_entry.xml  start-server.sh  start.sh  update_version.py  version.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: starter.yaml
annotations/: admin.py  api_views.py  filters.py  models.py  serializers.py
annotations/migrations/: 0001_production-state-2022-01-26.py  0002_add_new_lemma_props.py  0003_es_document_xml.py  0004_add_category_prop_to_collection.py  0005_add_prop_to_es_document_regarding_xml_modifaction_user.py  0006_add_prop_to_es_document_regarding_xml_errors.py  0007_alter_annotation_id_alter_autor_artikel_id_and_more.py  0008_auto_20251211_1614.py
belege/: admin.py  api_utils.py  api_views.py  apps.py  fields.py  models.py  opensearch_client.py  schema.py  search_utils.py  serializers.py  urls.py  utils.py  views.py
belege/migrations/: 0001_initial.py  0002_alter_beleg_options_beleg_archivzeile_beleg_bibl_and_more.py  0003_beleg_import_issue.py  0004_bundesland_gregion_kregion_ort.py  0005_remove_ort_abbr_alter_kregion_name.py  0006_alter_gregion_name.py  0007_alter_bundesland_name_alter_ort_name.py  (+37 more)
data/: places.json
dboeannotation/: metadata.py  settings.py  urls.py  wsgi.py
flat/: models.py
scripts/: extract_places.py
templates/: base.html
(+28 files in other folders)
