[project]
name = "dboeannotation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acdh-tei-pyutils>=1.6",
    "crispy-bootstrap5>=2025.4",
    "django>=5.2.1",
    "django-autocomplete-light>=3.12.1",
    "django-crispy-forms>=2.4",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-guardian>=3.0.0",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "elasticsearch==5.5.3",
    "elasticsearch-dsl>=0.0.9",
    "guardian>=0.2.3",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "csae-pyutils>=0.2",
    "flake8>=7.2.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
]
